5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1685_1952.log
== TEST (2019-04-25 20:41:28) 
-- CODE:
sbruto = float(input("escreva o salario bruto do funcionario: "))
if (sbruto <= 1659.38):
	sbase = sbruto - (0.08 * sbruto)
elif ((sbruto >= 1659.39) and (sbruto <= 2765.66)):
	sbase = sbruto - (0.09 * sbruto)
elif ((sbruto >= 2765.67) and (sbruto <= 5531.31)):
	sbase = sbruto - (0.11 * sbruto)
elif (sbruto > 5531.31):
	sbase = sbruto - 608.44
elif (sbase <= 1903.98):
	sliq = sbase
elif ((sbase >= 1903.99) and (sbase <= 2826.65)):
	sliq = sbase - (0.075 * sbase)
elif ((sbase >= 2826.66) and (sbase <= 3751.06)):
	sliq = sbase - (0.15 * sbase)
elif ((sbase >= 3751.06) and (sbase <= 4664.68)):
	sliq = sbase - (0.225 * sbase)
else:
	sliq = sbase - (0.275 * sbase)
print (sliq)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print (sliq)
NameError: name 'sliq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:43:23) 
-- CODE:
sbruto = float(input("escreva o salario bruto do funcionario: "))
if (sbruto <= 1659.38):
	sbase = sbruto - (0.08 * sbruto)
elif ((sbruto >= 1659.39) and (sbruto <= 2765.66)):
	sbase = sbruto - (0.09 * sbruto)
elif ((sbruto >= 2765.67) and (sbruto <= 5531.31)):
	sbase = sbruto - (0.11 * sbruto)
elif (sbruto > 5531.31):
	sbase = sbruto - 608.44
elif (sbase <= 1903.98):
	sliq = sbase
elif ((sbase >= 1903.99) and (sbase <= 2826.65)):
	sliq = sbase - (0.075 * sbase)
elif ((sbase >= 2826.66) and (sbase <= 3751.06)):
	sliq = sbase - (0.15 * sbase)
elif ((sbase >= 3751.06) and (sbase <= 4664.68)):
	sliq = sbase - (0.225 * sbase)
else:
	sliq = sbase - (0.275 * sbase)
print(round(sliq, 2))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(round(sliq, 2))
NameError: name 'sliq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:45:26) 
-- CODE:
sbruto = float(input("escreva o salario bruto do funcionario: "))
if (sbruto <= 1659.38):
	sbase = sbruto - (0.08 * sbruto)
elif ((sbruto >= 1659.39) and (sbruto <= 2765.66)):
	sbase = sbruto - (0.09 * sbruto)
elif ((sbruto >= 2765.67) and (sbruto <= 5531.31)):
	sbase = sbruto - (0.11 * sbruto)
elif (sbruto > 5531.31):
	sbase = sbruto - 608.44
elif (sbase <= 1903.98):
	sliq = sbase
elif ((sbase >= 1903.99) and (sbase <= 2826.65)):
	sliq = sbase - (0.075 * sbase)
elif ((sbase >= 2826.66) and (sbase <= 3751.06)):
	sliq = sbase - (0.15 * sbase)
elif ((sbase >= 3751.06) and (sbase <= 4664.68)):
	sliq = sbase - (0.225 * sbase)
else:
	sliq = sbase - (0.275 * sbase)

print("Salario liquido = R$", round(sliq, 2))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print("Salario liquido = R$", round(sliq, 2))
NameError: name 'sliq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:47:21) 
-- CODE:
sbruto = float(input("escreva o salario bruto do funcionario: "))
sbase = float(input("escreva o salario base do funcionario: "))
sliq - float(input("escreva o salario liquido do funcionario: "))
if (sbruto <= 1659.38):
	sbase = sbruto - (0.08 * sbruto)
elif ((sbruto >= 1659.39) and (sbruto <= 2765.66)):
	sbase = sbruto - (0.09 * sbruto)
elif ((sbruto >= 2765.67) and (sbruto <= 5531.31)):
	sbase = sbruto - (0.11 * sbruto)
elif (sbruto > 5531.31):
	sbase = sbruto - 608.44
elif (sbase <= 1903.98):
	sliq = sbase
elif ((sbase >= 1903.99) and (sbase <= 2826.65)):
	sliq = sbase - (0.075 * sbase)
elif ((sbase >= 2826.66) and (sbase <= 3751.06)):
	sliq = sbase - (0.15 * sbase)
elif ((sbase >= 3751.06) and (sbase <= 4664.68)):
	sliq = sbase - (0.225 * sbase)
else:
	sliq = sbase - (0.275 * sbase)

print("Salario liquido = R$", round(sliq, 2))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    sbase = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:50:52) 
-- CODE:
sbruto = float(input("escreva o salario bruto do funcionario: "))

if (sbruto <= 1659.38):
	sbase = sbruto - (0.08 * sbruto)
	
elif ((sbruto >= 1659.39) and (sbruto <= 2765.66)):
	sbase = sbruto - (0.09 * sbruto)
	
elif ((sbruto >= 2765.67) and (sbruto <= 5531.31)):
	sbase = sbruto - (0.11 * sbruto)
	
elif (sbruto > 5531.31):
	sbase = sbruto - 608.44
	
elif (sbase <= 1903.98):
	sliq = sbase
	print ("Salario liquido = R$", round(sliq, 2))
elif ((sbase >= 1903.99) and (sbase <= 2826.65)):
	sliq = sbase - (0.075 * sbase)
	print ("Salario liquido = R$", round(sliq, 2))
elif ((sbase >= 2826.66) and (sbase <= 3751.06)):
	sliq = sbase - (0.15 * sbase)
	print ("Salario liquido = R$", round(sliq, 2))
elif ((sbase >= 3751.06) and (sbase <= 4664.68)):
	sliq = sbase - (0.225 * sbase)
	print ("Salario liquido = R$", round(sliq, 2))
else:
	sliq = sbase - (0.275 * sbase)
	print ("Salario liquido = R$", round(sliq, 2))

print("Salario liquido = R$", round(sliq, 2))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 31, in <module>
    print("Salario liquido = R$", round(sliq, 2))
NameError: name 'sliq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
